Ajout du check bluetooth + mise à jour de l'activité 'GameActivity' par Baptiste

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,14 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     android:orientation="vertical"
     tools:context="com.example.juliensautereau.engarde.MainActivity">
 
-    <TextView
+    <ImageView
         android:layout_width="wrap_content"
-        android:layout_gravity="center_horizontal"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:src="@drawable/epee"
+        android:scaleType="centerCrop"
+        android:layout_gravity="center"
+        />
 
     <Button
         android:layout_width="match_parent"
@@ -19,5 +22,10 @@
         android:text="@string/boutonJouer"
         android:onClick="goToCheckActivity"/>
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/boutonQuitter"
+        android:onClick="exitApp"/>
 
 </LinearLayout>
