--- a/app/src/main/res/layout/activity_check_bluetooth.xml
+++ b/app/src/main/res/layout/activity_check_bluetooth.xml
@@ -6,4 +6,12 @@
     android:layout_height="match_parent"
     tools:context="com.example.juliensautereau.engarde.CheckBluetooth">
 
+    <TextView
+        android:id="@+id/checkTextview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="@string/bluetoothStatus"
+        />
+
 </android.support.constraint.ConstraintLayout>
