Ajout du support Bluetooth + Modification Template 'AppCompactActivity' vers 'SampleActivityBase'

--- a/app/src/main/res/values-sw600dp/template-dimens.xml
+++ b/app/src/main/res/values-sw600dp/template-dimens.xml
@@ -14,6 +14,11 @@
   limitations under the License.
   -->
 
-<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
+<resources>
 
-</menu>
+    <!-- Semantic definitions -->
+
+    <dimen name="horizontal_page_margin">@dimen/margin_huge</dimen>
+    <dimen name="vertical_page_margin">@dimen/margin_medium</dimen>
+
+</resources>
