--- a/app/src/main/res/layout-land/activity_game.xml
+++ b/app/src/main/res/layout-land/activity_game.xml
@@ -4,7 +4,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
 xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
-tools:context="com.example.juliensautereau.engarde.Jeu">
+tools:context="com.example.juliensautereau.engarde.GameActivity">
 
 <TextView
     android:id="@+id/piocheLabel"
@@ -87,7 +87,6 @@ tools:context="com.example.juliensautereau.engarde.Jeu">
     android:layout_marginTop="8dp"
     android:text="Avancer"
     android:textSize="7dp"
-    android:onClick="actionButtonAttaquer"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.015"
