--- a/app/src/main/res/values-v11/template-styles.xml
+++ b/app/src/main/res/values-v11/template-styles.xml
@@ -14,6 +14,9 @@
   limitations under the License.
   -->
 
-<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
+<resources>
 
-</menu>
+    <!-- Activity themes -->
+    <style name="Theme.Base" parent="android:Theme.Holo.Light" />
+
+</resources>
