Rajout action buttons

--- a/app/src/main/res/layout-land/activity_game.xml
+++ b/app/src/main/res/layout-land/activity_game.xml
@@ -4,7 +4,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
 xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
-tools:context="com.example.juliensautereau.engarde.GameActivity">
+tools:context="com.example.juliensautereau.engarde.Jeu">
 
 <TextView
     android:id="@+id/piocheLabel"
@@ -78,7 +78,7 @@ tools:context="com.example.juliensautereau.engarde.GameActivity">
     app:layout_constraintVertical_bias="0.154" />
 
 <Button
-    android:id="@+id/attaque1"
+    android:id="@+id/avancer"
     android:layout_width="71dp"
     android:layout_height="30dp"
     android:layout_marginBottom="8dp"
@@ -87,6 +87,8 @@ tools:context="com.example.juliensautereau.engarde.GameActivity">
     android:layout_marginTop="8dp"
     android:text="Avancer"
     android:textSize="7dp"
+    android:enabled="false"
+    android:onClick="actionButtonAttaquer"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.015"
@@ -95,7 +97,7 @@ tools:context="com.example.juliensautereau.engarde.GameActivity">
     app:layout_constraintVertical_bias="0.399" />
 
 <Button
-    android:id="@+id/attaque2"
+    android:id="@+id/reculer"
     android:layout_width="71dp"
     android:layout_height="30dp"
     android:layout_marginBottom="8dp"
@@ -104,6 +106,8 @@ tools:context="com.example.juliensautereau.engarde.GameActivity">
     android:layout_marginTop="8dp"
     android:text="Reculer"
     android:textSize="7dp"
+    android:enabled="false"
+    android:onClick="actionButtonReculer"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.015"
@@ -111,7 +115,7 @@ tools:context="com.example.juliensautereau.engarde.GameActivity">
     app:layout_constraintTop_toTopOf="parent" />
 
 <Button
-    android:id="@+id/attaque3"
+    android:id="@+id/attaqueD"
     android:layout_width="71dp"
     android:layout_height="37dp"
     android:layout_marginBottom="8dp"
@@ -120,6 +124,8 @@ tools:context="com.example.juliensautereau.engarde.GameActivity">
     android:layout_marginTop="8dp"
     android:text="Attaque directe"
     android:textSize="7dp"
+    android:enabled="false"
+    android:onClick="actionButtonAttaquer"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.015"
@@ -128,7 +134,7 @@ tools:context="com.example.juliensautereau.engarde.GameActivity">
     app:layout_constraintVertical_bias="0.611" />
 
 <Button
-    android:id="@+id/attaque4"
+    android:id="@+id/attaqueI"
     android:layout_width="71dp"
     android:layout_height="37dp"
     android:layout_marginBottom="8dp"
@@ -137,6 +143,8 @@ tools:context="com.example.juliensautereau.engarde.GameActivity">
     android:layout_marginTop="8dp"
     android:text="Attaque indirecte"
     android:textSize="7dp"
+    android:enabled="false"
+    android:onClick="actionButtonAttaquerIndirectement"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.015"
@@ -145,7 +153,7 @@ tools:context="com.example.juliensautereau.engarde.GameActivity">
     app:layout_constraintVertical_bias="0.732" />
 
 <Button
-    android:id="@+id/defense1"
+    android:id="@+id/parer"
     android:layout_width="71dp"
     android:layout_height="30dp"
     android:layout_marginBottom="8dp"
@@ -154,6 +162,8 @@ tools:context="com.example.juliensautereau.engarde.GameActivity">
     android:layout_marginTop="8dp"
     android:text="Parer"
     android:textSize="7dp"
+    android:enabled="false"
+    android:onClick="actionButtonParer"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.015"
@@ -162,7 +172,7 @@ tools:context="com.example.juliensautereau.engarde.GameActivity">
     app:layout_constraintVertical_bias="0.876" />
 
 <Button
-    android:id="@+id/defense2"
+    android:id="@+id/retraite"
     android:layout_width="71dp"
     android:layout_height="30dp"
     android:layout_marginBottom="8dp"
@@ -171,6 +181,8 @@ tools:context="com.example.juliensautereau.engarde.GameActivity">
     android:layout_marginTop="8dp"
     android:text="Retraite"
     android:textSize="7dp"
+    android:enabled="false"
+    android:onClick="actionButtonReculer"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.015"
@@ -189,6 +201,7 @@ tools:context="com.example.juliensautereau.engarde.GameActivity">
     android:textOn=""
     android:textOff=""
     android:textSize="40dp"
+    android:enabled="false"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.244"
@@ -207,6 +220,7 @@ tools:context="com.example.juliensautereau.engarde.GameActivity">
     android:textOn=""
     android:textOff=""
     android:textSize="40dp"
+    android:enabled="false"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.427"
@@ -225,6 +239,7 @@ tools:context="com.example.juliensautereau.engarde.GameActivity">
     android:textOn=""
     android:textOff=""
     android:textSize="40dp"
+    android:enabled="false"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.609"
@@ -243,6 +258,7 @@ tools:context="com.example.juliensautereau.engarde.GameActivity">
     android:textOn=""
     android:textOff=""
     android:textSize="40dp"
+    android:enabled="false"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.792"
@@ -261,6 +277,7 @@ tools:context="com.example.juliensautereau.engarde.GameActivity">
     android:textOn=""
     android:textOff=""
     android:textSize="40dp"
+    android:enabled="false"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.975"
