--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,7 @@
         android:layout_gravity="center"
         />
 
-    <Button
+    <Button android:id="@+id/Bjouer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/boutonJouer"
