--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -19,24 +19,39 @@
         android:layout_width="match_parent"
         android:layout_height="0px" />
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/epee"
-        android:scaleType="centerCrop"
-        android:layout_gravity="center"
-        />
-
-    <Button android:id="@+id/Bjouer"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/boutonJouer"
-        android:onClick="goToCheckActivity"/>
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/boutonQuitter"
-        android:onClick="exitApp"/>
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="10dp" />
+            <ImageView
+                android:layout_width="195dp"
+                android:layout_height="177dp"
+                android:layout_gravity="center"
+                android:scaleType="centerCrop"
+                android:src="@drawable/epee" />
+
+            <Button android:id="@+id/Bjouer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/boutonJouer"
+                android:onClick="goToCheckActivity"/>
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/boutonQuitter"
+                android:onClick="exitApp"/>
+        </LinearLayout>
+
+
+    </ScrollView>
+
 
 </LinearLayout>
