--- a/app/src/main/res/layout-land/activity_game.xml
+++ b/app/src/main/res/layout-land/activity_game.xml
@@ -88,7 +88,7 @@ tools:context="com.example.juliensautereau.engarde.Jeu">
     android:text="Avancer"
     android:textSize="7dp"
     android:enabled="false"
-    android:onClick="actionButtonAttaquer"
+    android:onClick="actionButtonAvancer"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.015"
@@ -106,6 +106,7 @@ tools:context="com.example.juliensautereau.engarde.Jeu">
         android:layout_marginTop="8dp"
         android:text="Fin du tour"
         android:textSize="7dp"
+        android:onClick="actionButtonfinTour"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.958"
